move code to src and add train and val logs to tutorial

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ torch==1.12.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
 torchsummary==1.5.1
 mrcfile
 matplotlib
+pandas
 pytorch-lightning==1.8.0.post1
 scikit-image
