switch to default instancenorm

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,195 +1,13 @@
-absl-py==2.1.0
-aiohttp==3.9.3
-aiosignal==1.3.1
-anyio==4.3.0
-archspec @ file:///croot/archspec_1697725767277/work
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-astunparse==1.6.3
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs @ file:///croot/attrs_1695717823297/work
-Babel==2.14.0
-beautifulsoup4 @ file:///croot/beautifulsoup4-split_1681493039619/work
-black==24.3.0
-bleach==6.1.0
-boltons @ file:///croot/boltons_1677628692245/work
-Brotli @ file:///tmp/abs_ecyw11_7ze/croots/recipe/brotli-split_1659616059936/work
-certifi @ file:///croot/certifi_1707229174982/work/certifi
-cffi @ file:///croot/cffi_1700254295673/work
-chardet @ file:///home/builder/ci_310/chardet_1640804867535/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///croot/click_1698129812380/work
-colorama==0.4.6
-comm @ file:///croot/comm_1709322850197/work
-conda @ file:///croot/conda_1696257509808/work
-conda-build @ file:///croot/conda-build_1705600620173/work
-conda-content-trust @ file:///croot/conda-content-trust_1693490622020/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1691418897561/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1690999929514/work
-conda_index @ file:///croot/conda-index_1706633791028/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1690987966409/work
-contourpy==1.2.0
-cryptography @ file:///croot/cryptography_1702070282333/work
-cycler==0.12.1
-ddw @ file:///workspaces/DeepDeWedge
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml==0.7.1
-distro @ file:///croot/distro_1701455004953/work
-dnspython==2.5.0
-exceptiongroup @ file:///croot/exceptiongroup_1706031385326/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-expecttest==0.2.1
-fastjsonschema==2.19.1
-filelock @ file:///croot/filelock_1700591183607/work
-fonttools==4.50.0
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.12.2
-gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455533097/work
-grpcio==1.62.1
-h11==0.14.0
-httpcore==1.0.4
-httpx==0.27.0
-hypothesis==6.97.3
-idna @ file:///croot/idna_1666125576474/work
-imageio==2.34.0
-install==1.3.5
-ipykernel @ file:///croot/ipykernel_1705933831282/work
-ipython @ file:///croot/ipython_1704833016303/work
-ipywidgets==8.1.2
-isoduration==20.11.0
-jedi @ file:///tmp/build/80754af9/jedi_1644315229345/work
-Jinja2 @ file:///croot/jinja2_1666908132255/work
-json5==0.9.24
-jsonpatch @ file:///tmp/build/80754af9/jsonpatch_1615747632069/work
-jsonpointer==2.1
-jsonschema @ file:///croot/jsonschema_1699041609003/work
-jsonschema-specifications @ file:///croot/jsonschema-specifications_1699032386549/work
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.4
-jupyter_client @ file:///croot/jupyter_client_1699455897726/work
-jupyter_core @ file:///croot/jupyter_core_1698937308754/work
-jupyter_server==2.13.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.1.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.4
-jupyterlab_widgets==3.0.10
-kiwisolver==1.4.5
-lazy_loader==0.3
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-libmambapy @ file:///croot/mamba-split_1698782620632/work/libmambapy
-lightning-lite==1.8.0.post1
-lightning-utilities==0.3.0
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe @ file:///croot/markupsafe_1704205993651/work
-matplotlib==3.8.3
-matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
-mdurl==0.1.2
-menuinst @ file:///croot/menuinst_1702390294373/work
-mistune==3.0.2
-mkl-fft @ file:///croot/mkl_fft_1695058164594/work
-mkl-random @ file:///croot/mkl_random_1695059800811/work
-mkl-service==2.4.0
-more-itertools @ file:///croot/more-itertools_1700662129964/work
-mpmath @ file:///croot/mpmath_1690848262763/work
+matplotlib==3.8.4
 mrcfile==1.5.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.3
-nest-asyncio @ file:///croot/nest-asyncio_1708532673751/work
-networkx @ file:///croot/networkx_1690561992265/work
-notebook==7.1.2
-notebook_shim==0.2.4
-numpy @ file:///croot/numpy_and_numpy_base_1704311704800/work/dist/numpy-1.26.3-cp310-cp310-linux_x86_64.whl#sha256=a281f24b826e51f1c25bdd24960ab44b4bc294c65d81560441ba7fffd8ddd2a7
-optree==0.10.0
-overrides==7.7.0
-packaging @ file:///croot/packaging_1693575174725/work
 pandas==2.2.1
-pandocfilters==1.5.1
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pathspec==0.12.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-Pillow @ file:///croot/pillow_1696580024257/work
-pkginfo @ file:///croot/pkginfo_1679431160147/work
-platformdirs @ file:///croot/platformdirs_1692205439124/work
-pluggy @ file:///tmp/build/80754af9/pluggy_1648024709248/work
-prometheus_client==0.20.0
-prompt-toolkit @ file:///croot/prompt-toolkit_1704404351921/work
-protobuf==5.26.0
-psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycosat @ file:///croot/pycosat_1696536503704/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///croot/pygments_1684279966437/work
-pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
-pyparsing==3.1.2
-PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-dotenv==1.0.1
-python-etcd==0.4.5
-python-json-logger==2.0.7
 pytorch-lightning==1.8.0.post1
-pytz @ file:///croot/pytz_1695131579487/work
-PyYAML @ file:///croot/pyyaml_1698096049011/work
-pyzmq @ file:///croot/pyzmq_1705605076900/work
-qtconsole==5.5.1
-QtPy==2.4.1
-referencing @ file:///croot/referencing_1699012038513/work
-requests @ file:///croot/requests_1690400202158/work
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py @ file:///croot/rpds-py_1698945930462/work
-ruamel.yaml @ file:///croot/ruamel.yaml_1666304550667/work
-ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1666302247304/work
+PyYAML==6.0.1
 scikit-image==0.22.0
-scipy==1.12.0
-Send2Trash==1.8.2
-shellingham==1.5.4
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve @ file:///croot/soupsieve_1696347547217/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-sympy @ file:///croot/sympy_1701397643339/work
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-termcolor==2.4.0
-terminado==0.18.1
-tifffile==2024.2.12
-tinycss2==1.2.1
-toml==0.10.2
-tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
-toolz @ file:///croot/toolz_1667464077321/work
-tornado @ file:///croot/tornado_1696936946304/work
-tqdm @ file:///croot/tqdm_1679561862951/work
-traitlets @ file:///croot/traitlets_1671143879854/work
-triton==2.2.0
-truststore @ file:///croot/truststore_1695244293384/work
-typer==0.9.0
+scipy==1.13.0
+tqdm==4.65.0
+typer==0.12.0
+typer-cli==0.12.0
 typer-config==1.4.0
-types-dataclasses==0.6.6
-types-python-dateutil==2.9.0.20240316
-typing_extensions @ file:///croot/typing_extensions_1705599297034/work
-tzdata==2024.1
-uri-template==1.3.0
-urllib3 @ file:///croot/urllib3_1698257533958/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.10
-yarl==1.9.4
-zstandard @ file:///croot/zstandard_1677013143055/work
+typer-slim==0.12.0
+typing_extensions==4.9.0
