--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 matplotlib==3.8.4
 mrcfile==1.5.0
 pandas==2.2.1
+pexpect==4.9.0
 pytorch-lightning==1.8.0.post1
 PyYAML==6.0.1
 scikit-image==0.22.0
