--- a/tutorial/config.yaml
+++ b/tutorial/config.yaml
@@ -1,18 +1,19 @@
 shared:
-  project_dir: "/media/ssd1/simon/ddw/tutorial_project"
+  project_dir: "./tutorial_project"
   tomo0_files: 
-    - "/media/ssd1/simon/ddw/tutorial_data/tomo_even_frames.rec"
+    - "./tutorial_data/tomo_even_frames.rec"
   tomo1_files: 
-    - "/media/ssd1/simon/ddw/tutorial_data/tomo_odd_frames.rec"
+    - "./tutorial_data/tomo_odd_frames.rec"
   subtomo_size: 96
   mw_angle: 50
   num_workers: 10
-  gpu: 0
+  gpu: 0  # you can also set this to a list of GPUs, e.g. [0, 1]. Note: Only fit_model will use multiple GPUs. refine_tomogram will use only one GPU (the first one in the list). 
+  # distributed_backend: "nccl"  # which backend PyTorch Lightning uses for distributed training 
   seed: 42
 
 prepare_data:
   mask_files:
-    - "/media/ssd1/simon/ddw/tutorial_data/mask.mrc"
+    - "./tutorial_data/mask.mrc"
   min_nonzero_mask_fraction_in_subtomo: 0.3
   subtomo_extraction_strides: [64, 80, 80] 
   val_fraction: 0.2
@@ -25,16 +26,16 @@ fit_model:
     adam_params_dict: 
       lr: 0.0004
     num_epochs: 1000
-    batch_size: 6
+    batch_size: 5
     update_subtomo_missing_wedges_every_n_epochs: 10
     check_val_every_n_epochs: 10
     save_n_models_with_lowest_val_loss: 5
     save_n_models_with_lowest_fitting_loss: 5
     save_model_every_n_epochs: 50
-    logger: "csv"
+    logger: "csv" 
 
 
 refine_tomogram:
-    model_checkpoint_file: "/media/ssd1/simon/ddw/tutorial_project/logs/gpus=2/checkpoints/epoch/epoch=999.ckpt"
+    model_checkpoint_file: "./tutorial_data/fitted_model.ckpt"
     subtomo_overlap: 32
     batch_size: 10
